# horovod

horovod/common/ops/rocm/: CMakeLists.txt
